// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers App matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiPaper-root makeStyles-root-2 makeStyles-root-6 MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="makeStyles-root-35"
      >
        <a
          class="MuiAvatar-root makeStyles-avatar-34 MuiAvatar-colorDefault"
          href="#/"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
            />
          </svg>
        </a>
        <div
          class="makeStyles-titleWrap-36"
        >
          <h5
            class="MuiTypography-root makeStyles-brandFont-37 MuiTypography-h5"
          >
            Of Note
            <small>
              <em>
                s
              </em>
            </small>
          </h5>
          <h6
            class="MuiTypography-root makeStyles-brandFont-37 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
          >
            Offline note taking
          </h6>
        </div>
      </div>
      <div
        class="makeStyles-filter-4"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-80 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
            data-shrink="true"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input"
              name="filter"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-141 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-142"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
            Search tags or titles
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root"
      />
      <div
        class="makeStyles-eh-5"
      >
        <ul
          class="MuiList-root MuiList-padding"
        />
      </div>
    </div>
    <div
      class="makeStyles-root-165"
    >
      <form>
        <div
          class="makeStyles-root-166"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-167"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <span
            class="MuiTypography-root makeStyles-title-169 MuiTypography-h5"
          >
            New Note
          </span>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-80 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
          >
            Title
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input"
              name="title"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-141 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-142"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
             
          </p>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-80 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
          >
            Note
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          >
            <textarea
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-163 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
              name="md"
              rows="2"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-141 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-142"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
            Supports Github flavored markdown
          </p>
        </div>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-inp-80 MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
            data-shrink="false"
          >
            Tags
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input"
              name="tags"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-141 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-142"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained"
          >
            Separated by spaces
          </p>
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`containers CreateNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-195"
  >
    <form>
      <div
        class="makeStyles-root-196"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-197"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-title-199 MuiTypography-h5"
        >
          New Note
        </span>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-251 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-312 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-313"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-251 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-193 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-312 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-313"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Supports Github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-251 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-312 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-313"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Separated by spaces
        </p>
      </div>
      <div />
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers EditNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-336"
  >
    <form>
      <div
        class="makeStyles-root-337"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-338"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-title-340 MuiTypography-h5"
        >
          New Note
        </span>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-392 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-453 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-454"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-392 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-334 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-453 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-454"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Supports Github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-392 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-453 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-454"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Separated by spaces
        </p>
      </div>
      <div />
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers NoteDisplay matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-478"
  >
    <div
      class="makeStyles-root-479"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-480"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <span
        class="MuiTypography-root makeStyles-title-482 MuiTypography-h5"
      />
    </div>
    <div
      class="makeStyles-content-473"
    />
    <div
      class="makeStyles-tags-476"
    />
    <div />
  </div>
</DocumentFragment>
`;

exports[`containers SideBar matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root makeStyles-root-544 makeStyles-root-548 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="makeStyles-root-577"
    >
      <a
        class="MuiAvatar-root makeStyles-avatar-576 MuiAvatar-colorDefault"
        href="#/"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
          />
        </svg>
      </a>
      <div
        class="makeStyles-titleWrap-578"
      >
        <h5
          class="MuiTypography-root makeStyles-brandFont-579 MuiTypography-h5"
        >
          Of Note
          <small>
            <em>
              s
            </em>
          </small>
        </h5>
        <h6
          class="MuiTypography-root makeStyles-brandFont-579 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Offline note taking
        </h6>
      </div>
    </div>
    <div
      class="makeStyles-filter-546"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-622 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
          data-shrink="true"
        >
          Filter
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="filter"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-683 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-684"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Search tags or titles
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="makeStyles-eh-547"
    >
      <ul
        class="MuiList-root MuiList-padding"
      />
    </div>
  </div>
</DocumentFragment>
`;
